Fixed when explore menu item too long

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -765,6 +765,9 @@ border-color: #d43f3a;
   width:100%;
 }
 
+.explore-arrow{
+  float:right;
+}
 //*############################ PHOTOS CSS #############################*//
 
 .paginate{
